-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.0
-
None
-
3
-
4160
The maloo report: https://maloo.whamcloud.com/test_sessions/8ad1dbb0-0664-11e2-9e80-52540035b04c
Console log on MDS:
05:10:43:BUG: unable to handle kernel NULL pointer dereference at 0000000000000268
05:10:43:IP: [<ffffffff8150057e>] _spin_lock+0xe/0x30
05:10:43:PGD 0
05:10:43:Oops: 0002 1 SMP
05:10:43:last sysfs file: /sys/devices/system/cpu/possible
05:10:43:CPU 0
05:10:43:Modules linked in: osp(U) cmm(U) mdt(U) mgs(U) mgc(U) fsfilt_ldiskfs(U) osd_ldiskfs(U) ldiskfs(U) mdd(U) mds(U) lustre(U) lquota(U) lov(U) osc(U) mdc(U) fid(U) fld(U) ksocklnd(U) ptlrpc(U) obdclass(U) lnet(U) lvfs(U) libcfs(U) nfs fscache sha512_generic sha256_generic jbd2 nfsd lockd nfs_acl auth_rpcgss exportfs autofs4 sunrpc ib_ipoib rdma_ucm ib_ucm ib_uverbs ib_umad rdma_cm ib_cm iw_cm ib_addr ipv6 ib_sa ib_mad ib_core microcode virtio_balloon 8139too 8139cp mii i2c_piix4 i2c_core ext3 jbd mbcache virtio_blk pata_acpi ata_generic ata_piix virtio_pci virtio_ring virtio dm_mirror dm_region_hash dm_log dm_mod [last unloaded: libcfs]
05:10:43:
05:10:43:Pid: 9950, comm: ll_cfg_requeue Not tainted 2.6.32-279.5.1.el6_lustre.g7f15218.x86_64 #1 Red Hat KVM
05:10:43:RIP: 0010:[<ffffffff8150057e>] [<ffffffff8150057e>] _spin_lock+0xe/0x30
05:10:43:RSP: 0018:ffff88007bea9c00 EFLAGS: 00010286
05:10:43:RAX: 0000000000010000 RBX: 000200000a0a02df RCX: 0000000000000000
05:10:43:RDX: ffffffffa0595497 RSI: 0000000000000000 RDI: 0000000000000268
05:10:43:RBP: ffff88007bea9c00 R08: 20737365636f7250 R09: 0a64657265746e65
05:10:43:R10: 20737365636f7250 R11: 0a64657265746e65 R12: 0000000000000000
05:10:43:R13: ffff88007cd60008 R14: ffff88007cd60039 R15: 0000000000000268
05:10:43:FS: 00007fb367af8700(0000) GS:ffff880002200000(0000) knlGS:0000000000000000
05:10:43:CS: 0010 DS: 0000 ES: 0000 CR0: 000000008005003b
05:10:43:CR2: 0000000000000268 CR3: 0000000037df7000 CR4: 00000000000006f0
05:10:43:DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
05:10:43:DR3: 0000000000000000 DR6: 00000000ffff0ff0 DR7: 0000000000000400
05:10:43:Process ll_cfg_requeue (pid: 9950, threadinfo ffff88007bea8000, task ffff880070513500)
05:10:43:Stack:
05:10:43: ffff88007bea9c40 ffffffffa050b675 ffff88007bea9c40 ffff88007bea9cc0
05:10:43:<d> ffff8800593c3020 ffff88007cd60008 ffff88005a592038 ffffffffa09eace2
05:10:43:<d> ffff88007bea9d60 ffffffffa09e42da 000026de0000001b ffff880070510104
05:10:43:Call Trace:
05:10:43: [<ffffffffa050b675>] client_import_find_conn+0x45/0x150 [ptlrpc]
05:10:43: [<ffffffffa09e42da>] mgc_apply_recover_logs+0x3ca/0x1830 [mgc]
05:10:43: [<ffffffffa09e7c96>] mgc_process_log+0xee6/0x1340 [mgc]
05:10:43: [<ffffffffa09e1990>] ? mgc_blocking_ast+0x0/0x680 [mgc]
05:10:43: [<ffffffffa051f270>] ? ldlm_completion_ast+0x0/0x730 [ptlrpc]
05:10:43: [<ffffffffa09e8ab3>] mgc_requeue_thread+0x1a3/0x760 [mgc]
05:10:43: [<ffffffff81060250>] ? default_wake_function+0x0/0x20
05:10:43: [<ffffffffa09e8910>] ? mgc_requeue_thread+0x0/0x760 [mgc]
05:10:43: [<ffffffff8100c14a>] child_rip+0xa/0x20
05:10:43: [<ffffffffa09e8910>] ? mgc_requeue_thread+0x0/0x760 [mgc]
05:10:43: [<ffffffffa09e8910>] ? mgc_requeue_thread+0x0/0x760 [mgc]
05:10:43: [<ffffffff8100c140>] ? child_rip+0x0/0x20
05:10:43:Code: e5 0f 1f 44 00 00 fa 66 0f 1f 44 00 00 3e 81 2f 00 00 00 01 74 05 e8 b2 e3 d7 ff c9 c3 55 48 89 e5 0f 1f 44 00 00 b8 00 00 01 00 <3e> 0f c1 07 0f b7 d0 c1 e8 10 39 c2 74 0e f3 90 0f 1f 44 00 00
05:10:43:RIP [<ffffffff8150057e>] _spin_lock+0xe/0x30
05:10:43: RSP <ffff88007bea9c00>
05:10:43:CR2: 0000000000000268